<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pigeon</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">password</string>
    <string name="Login_button_label">Login</string>
    <string name="sign_up_text">Create New Account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signUp_button">Sign Up</string>
    <string name="signUp_error_message">Please enter email,password and UserName correctly</string>
    <string name="signUp_dialogbox_title">Ooops!Error</string>
    <string name="login_error_message">Invalid ID or password.Please try again using your full Rabbit ID</string>
    <string name="login_dialogbox_title">Ooops!Error</string>
    <string name="empty_inBox_fragment">No inbox to display</string>
    <string name="empty_friends_fragment">No friends to display</string>
    <string name="logout_label">Logout</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_buddy">EditBuddyActivity</string>
    <string name="error_title">Ooops!Error</string>
    <string name="camera_label">Camera</string>
    <string name="error_external_storage">there was error when trying to save picture</string>
    <string name="general_error">Sorry, There is an Error</string>

    <string-array name="camera_choice">
        <item>Take Picture</item>
        <item>Choose Picture</item>
        <item>Take Video</item>
        <item>Choose Video</item>
    </string-array>

    <string name="bigFileWarning">The Selected File Must be less than 10MB</string>
    <string name="error_opening_the_file">error opening this File</string>
    <string name="file_Too_Targe_Warning">Selected File size is too large,file must be less than 10 MB</string>
    <string name="title_activity_recipient">Choose Recipient</string>
    <string name="no_recipients">please add some friends</string>
    <string name="menu_send_lebel">SEND</string>
    <string name="error_while_uploading_file">There was an error with the selected File, Please select another File</string>
    <string name="error_sending_message">there was an error sendind a message please try Again</string>
    <string name="picIcon">pictureIcon</string>
    <string name="title_activity_image_view">Ribbit</string>
    <string name="background_image">bckground_image</string>
    <string name="subtitle_message">Lets stay Connected!!</string>
    <string name="desc_user_avatar">descUserAvatar</string>
    <string name="checked_icon">checkedIcon</string>
    <string name="push_notification">you have a new push message from%s</string>

</resources>
